# model-data-convert-display

./: .gitattributes  .gitignore  DEPLOY.md  Dockerfile.frontend  README.md  SETUP_COMPLETE.md  SKP_CONVERTER_ANALYSIS.md  TEST_CONVERSION.md  check-docker.ps1  docker-compose.local.yml  docker-compose.yml  eslint.config.js  index.html  install-docker.ps1  install-python311.ps1  nginx.conf  package-lock.json  package.json  setup-docker-mirror.ps1  setup-git-hooks.ps1  start-all.bat  start-dev.bat  start-dev.sh  start-full.bat  start-production.bat  test-full-flow.ps1  tsconfig.app.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build-skp-converter.yml
docs/: cad_entity_split.md  oda_entity_parser_split.md
docs/cad/: audit-2026-04-23.md  file-inventory.md  web-cad-bundle-v1.md  whitebox-rename-map.md  whitebox-transition.md
docs/test/: 文字尺度测试.dwg
scripts/: debug-shx-glyph.mjs  diagnose-font-pipeline.py  gen-bigfont-map.mjs  sync-oda-runtime.ps1  verify-bigfont-pipeline.py  verify-font-collect.py
scripts/cad-engine/: build-cad-runtime.mjs  build-whitebox-runtime.mjs  extract-whitebox-sources.mjs
server/: Dockerfile  app.py  app_full.py  app_simple.py  app_skp_api.py  check_glb.py  combined_app.py  converter.py  dwg_service_core.py  requirements-py314.txt  requirements.txt  skp_converter.py  start.sh  test_convert.py  test_dll.py  test_simple.py  test_temp.py
server/converted/: 037f17fc-28bc-4c79-ae65-1805e99fefdd.glb  1712cbab-4787-4cbb-9ead-2e354b4f1131.glb  2d981dfb-7ad3-48b2-bee2-f10cd6e14c9e.glb  346e414b-ae92-45bf-bbfd-30a5f78ff0d1.glb  432e938b-5601-4520-aaa8-8f21c1159957.glb  59ee62ea-c168-4536-8899-bafb09cdaee1.glb  check_dll.glb  db014aa1-1648-4d7c-82a3-83c8d7647413.glb  debug_test.glb  test_color.glb  test_material.glb  test_merged_gltf.json  test_output.glb  中文测试输出.glb
server/dwg/: __init__.py  external_proxy.py  model_document.py  semantics.py  shx_outline.py  stroke_font.py  styles.py
server/dwg/block/: __init__.py  expander.py  transformer.py
server/dwg/cad_model/: database.py  document.py
server/dwg/common/: __init__.py  affine.py  block_utils.py  colors.py  constants.py  core_utils.py  dimension_utils.py  fonts.py  geometry.py  hatch_utils.py  oda_parse.py  parse_utils.py
server/dwg/dimension/: __init__.py  arrow_repair.py  block_expander.py  payload.py  primitives.py
server/dwg/document_model/: __init__.py  database.py  document.py
server/dwg/dwg_model/: __init__.py  ac_db_database.py  ac_rx_object.py  classes.py
server/dwg/entities/: __init__.py  arc.py  block.py  catalog.py  circle.py  ellipse.py  hatch.py  leader.py  line.py  mtext.py  point.py  polyline.py  primitive_builder.py  primitives_common.py  spline.py  surface.py  table.py  text.py
server/dwg/model_builders/: blocks_builder.py  compatibility_export.py  entity_common.py  entity_factory.py  from_oda_dump.py  spaces_builder.py  tables_builder.py
server/dwg/model_core/: diagnostics.py  named_object.py
server/dwg/model_queries/: hierarchy.py  properties.py  render_inputs.py  selection.py
server/dwg/oda/: __init__.py  blocks.py  dump_adapter.py  entity_builder.py  runtime.py
server/dwg/query/: __init__.py  spatial.py
server/dwg/render_intent/: builder.py
server/dwg/text/: __init__.py  vectorize.py
server/fonts/: 6711.SHX  9220.SHX  ACAD.PGP  ACAD.PGP.TEMPZIP  ACADPSD.PS  ACADPSF.PS  ACADPSI.PS  ACADPSS.PS  ACADSTK.DMP  ACCI-FS.SHX  ACE.SHX.TEMPZIP  AE.SXK  AMS_FS.SHX  APPLOAD.DFS  ASCTEXT.LSP  ASLB.DWK  Aaa.shp  Aaa.shx.TEMPZIP  BASE.DCL  BIGFONT.SHP  BIGFONT.SHX.TEMPZIP  Baoyuan.shx.TEMPZIP  C.SHX  C2.SHX  CHINA.SHX.TEMPZIP  CHINA.SXK  CHINESET.SHP  CHINESET.SHX.TEMPZIP  CHKLIST.CPS  COMPLEX.SHP  COMPLEX.SHX.TEMPZIP  CTXT.SHX.TEMPZIP  Cass.shx.TEMPZIP  China_ds.shx.TEMPZIP  Cobt____.shx.TEMPZIP  Cyrillic.shx.TEMPZIP  Cyriltlc.shx.TEMPZIP  DAYUF.SXK  DAYUM.SXK  DAYUS.SXK  (+181 more)
server/scripts/: check_drawing1_tree_consistency.py  check_dwg_acceptance.py  debug_dimension_pipeline.py
server/skp_converter/: BUILD.md  CMakeLists.txt  README.md  auto-build.bat  build.bat  build.ps1  skp_converter.cpp  skp_converter.h  skp_converter.sln  skp_converter.vcxproj  skp_to_gltf.cpp  skp_to_gltf.h  test_converter.cpp  watch-build.ps1
server/skp_converter/build_verify/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  skp_converter.sln  skp_converter.vcxproj  skp_converter.vcxproj.filters  test_converter.vcxproj  test_converter.vcxproj.filters
server/skp_converter/build_verify/lib/Release/: skp_converter.exp
server/skp_converter/build_verify/skp_converter.dir/Release/: skp_converter.dll.recipe  skp_converter.iobj
server/skp_converter/build_verify/skp_converter.dir/Release/skp_converter.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  skp_converter.lastbuildstate
server/skp_converter/build_verify/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
server/skp_converter/build_verify/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
server/uploads/: 5af4b45b-7548-44cd-9856-07c65d27ffc9_09-20100130-1M.skp  68d8a1e8-512d-407c-b394-44c92a42e361_test.skp  b1b9db94-0994-4adc-ae3d-e525d0cd136a_01-20100130-1M.skp  c487e7de-bbaf-4dd3-92ae-e040a5ace5fa_02-93.3-20100130-1M.skp  c8b5d466-ae6e-487a-b383-483296820900_06-20100130-1M.skp  dd538650-21e0-44c0-8fec-0ed004612a18_77-20100316-.skp
skp_converter_deploy/: skp_converter.dll.bak  skp_converter.dll.bak2
src/: App.css  App.tsx
src/components/: ErrorBoundary.tsx  FormatConverter.tsx
src/components/upload/: BackendFileUpload.tsx  FileUpload.tsx
src/components/viewer/: CADViewer.tsx  CADViewerCadEngine.tsx  DXFViewer.tsx  Drawing2DViewer.tsx  Model3DViewer.tsx  cadInspectorProperties.ts  (+1 more)
src/services/: converterApi.ts  dwgApi.ts
(+510 files in other folders)
